<resources>
    <string name="app_name">YouParking</string>
    <string name="prompt_email">Email</string>
    <string name="login_email_hint">Email (.edu)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_no_account">Don\'t have an account? </string>
    <string name="login_sign_up"><u>Sign Up!</u></string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reg_logo">logo</string>
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_university">University</string>
    <string name="reg_email">Email</string>
    <string name="reg_hint">(.edu)</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_btn">Continue</string>
    <string name="allow_only_alpha">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-</string>
    <string name="allow_alpha_and_numbers">abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="allow_alpha_and_special_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-\'</string>
    <string name="allow_characters_for_email">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@.!#$%&amp;\'*+-/=?^_`{|}~</string>
    <string name="vehicleRegisterTitle"><u>Vehicle Registration</u></string>
    <string name="emailVerifyTitle"><u>Email Verification</u></string>
    <string name="home_welcome"><u>Welcome, User User</u></string>
    <string name="home_spots_text"><u>Spots On Campus:</u></string>
    <string name="home_spots_number">0</string>
    <string name="home_stats_text"><u>Statistics:</u></string>
    <string name="home_achievements_text">Achievements:</string>
    <string name="auctionTitle"><u>Auction Spot</u></string>
    <string name="achievements_title"><u>Achievements</u></string>
    <string name="problemFinding"><u>Problems while Finding?</u></string>
    <string name="problemHolding"><u>Problems while Holding?</u></string>
    <string name="vehicleTitle"><u>My Vehicles</u></string>
    <string name="title_activity_general_map">Map Location</string>
    <string name="question_current_location">Is this your current location?</string>
    <string name="icon_ticket">&#xf145;</string>
    <string name="icon_car">&#xf1b9;</string>
    <string name="icon_cart">&#xf07a;</string>
    <string name="icon_marker">&#xf041;</string>
    <string name="icon_five">&#xf256;</string>
    <string name="icon_one">&#xf25a;</string>
    <string name="icon_cancel">&#xf00d;</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="points_prompt">How many tickets for this spot?</string>
    <string-array name="points_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="title_activity_find_now">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="bids_title"><u>Active Bids:</u></string>
</resources>