<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="clink.youparking.LoginActivity"
    android:onClick="OnLogin"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/loading_image"
                android:id="@+id/imageView3" />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:background="@color/white"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email_hint"
                android:digits="@string/allow_characters_for_email" />

            <EditText
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@color/white"
                android:padding="10dp"
                android:ems="10"
                android:id="@+id/pass"
                android:hint="@string/login_password_hint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:id="@+id/btnLogin"
                android:onClick="OnLogin"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_no_account"
                android:id="@+id/noAccount"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_up"
                android:textSize="20sp"
                android:textAlignment="center"
                android:paddingStart="8sp"
                android:paddingEnd="0sp"
                android:linksClickable="true"
                android:textColor="#000"
                android:onClick="goToRegistration"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
