<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/notebackground">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="?attr/colorPrimaryDark"
                app:titleTextColor="@color/white">

            </android.support.v7.widget.Toolbar>

        </LinearLayout>

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- Sign Up Logo -->
            <!-- First Name Label -->
            <TextView
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="20dip"
                android:textSize="30dp"
                android:text="@string/reg_first_name" />
            <EditText
                android:id="@+id/reg_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:inputType="textPersonName"
                android:maxLines="2"
                android:digits="@string/allow_only_alpha" />
            <!-- Last Name Label -->
            <TextView
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:layout_marginTop="20dip"
                android:text="@string/reg_last_name" />
            <EditText
                android:id="@+id/reg_last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:maxLines="2"
                android:inputType="textPersonName"
                android:digits="@string/allow_only_alpha"/>
            <!-- School Label -->
            <TextView
                android:id="@+id/universityText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:layout_marginTop="20dip"
                android:text="@string/reg_university" />
            <AutoCompleteTextView android:id="@+id/reg_university"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="2"
                android:textSize="30dp"
                android:inputType="text"
                android:digits="@string/allow_alpha_and_special_characters"/>
            <!--  Email Label -->
            <TextView
                android:id="@+id/emailText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:layout_marginTop="20dip"
                android:text="@string/reg_email" />
            <EditText
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:digits="@string/allow_characters_for_email"
                android:layout_marginTop="5dip"
                android:textSize="30dp"
                android:maxLines="2"
                android:layout_marginBottom="20dip"
                android:hint="@string/reg_hint" />
            <!-- Password Label -->
            <TextView
                android:id="@+id/passwordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:text="@string/reg_password" />
            <EditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="30dp"
                android:maxLines="2"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip" />
            <!-- Confirm Password Label -->
            <TextView
                android:id="@+id/confirmText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:text="@string/reg_confirm_password" />
            <EditText
                android:id="@+id/reg_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="30dp"
                android:maxLines="2"
                android:layout_marginTop="5dip" />
            <!-- Register Button -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingRight="40dp"
                android:paddingLeft="40dp"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/reg_btn"
                android:onClick="goToEmailVerification"
                android:background="@drawable/button_round2"
                android:textColor="@color/colorPrimary"
                android:fontFamily="casual"/>
            <!--<FrameLayout-->
                <!--android:layout_width="115dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:onClick="goToEmailVerification">-->

                <!--<ImageView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:src="@drawable/scribble2"-->
                    <!--android:scaleType="fitXY"-->
                    <!--android:adjustViewBounds="true" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Continue"-->
                    <!--android:textStyle="bold"-->
                    <!--android:fontFamily="casual"-->
                    <!--android:textColor="@color/colorPrimary"-->
                    <!--android:layout_gravity="center"/>-->

            <!--</FrameLayout>-->
        </LinearLayout>
    </LinearLayout>
</ScrollView>